--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -1,90 +1,178 @@
-<div class="accordion" id="accordionPanelsStayOpenExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+<div
+  class="w-full justify-center flex mx-auto max-w-screen-xl p-4 py-6 lg:py-8"
+>
+  <div id="accordion-collapse" class="w-full" data-accordion="collapse">
+    <h2 id="accordion-collapse-heading-1" class="">
       <button
-        class="accordion-button"
         type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#panelsStayOpen-collapseOne"
+        class="flex items-center justify-between text-[20px] w-full p-5 font-sm rtl:text-right text-sky-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-sky-200 dark:focus:ring-sky-800 dark:border-gray-700 dark:text-gray-400 hover:bg-sky-500 hover:text-white dark:hover:bg-sky-800 gap-3"
+        data-accordion-target="#accordion-collapse-body-1"
         aria-expanded="true"
-        aria-controls="panelsStayOpen-collapseOne"
+        aria-controls="accordion-collapse-body-1"
       >
-        Accordion Item #1
+        <span class="">What is Flowbite?</span>
+        <svg
+          data-accordion-icon
+          class="w-3 h-3 rotate-180 shrink-0"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 10 6"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M9 5 5 1 1 5"
+          />
+        </svg>
       </button>
     </h2>
     <div
-      id="panelsStayOpen-collapseOne"
-      class="accordion-collapse collapse show"
-      aria-labelledby="panelsStayOpen-headingOne"
+      id="accordion-collapse-body-1"
+      class="hidden"
+      aria-labelledby="accordion-collapse-heading-1"
     >
-      <div class="accordion-body">
-        <strong>This is the first item's accordion body.</strong> It is shown by
-        default, until the collapse plugin adds the appropriate classes that we
-        use to style each element. These classes control the overall appearance,
-        as well as the showing and hiding via CSS transitions. You can modify
-        any of this with custom CSS or overriding our default variables. It's
-        also worth noting that just about any HTML can go within the
-        <code>.accordion-body</code>, though the transition does limit overflow.
+      <div
+        class="p-5 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900"
+      >
+        <a
+          href="#"
+          class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-auto hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700"
+        >
+          <img
+            class="object-cover w-full rounded-t-lg md:w-2/4 md:rounded-none md:rounded-s-lg"
+            src="https://stackblitz.com/storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBMGdlRGc9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--a053077d208ba32d0c36e797850bb8c72e5fa808/IMG-20200226-WA0000.jpg"
+            alt=""
+          />
+          <div class="flex flex-col justify-between p-4 leading-normal">
+            <h5
+              class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
+            >
+              Noteworthy technology acquisitions 2021
+            </h5>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+              Here are the biggest enterprise technology acquisitions of 2021 so
+              far, in reverse chronological order.
+            </p>
+          </div>
+        </a>
       </div>
     </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+    <h2 id="accordion-collapse-heading-2">
       <button
-        class="accordion-button collapsed"
         type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#panelsStayOpen-collapseTwo"
+        class="flex items-center justify-between text-[20px] w-full p-5 font-sm rtl:text-right text-sky-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-sky-200 dark:focus:ring-sky-800 dark:border-gray-700 dark:text-gray-400 hover:bg-sky-500 hover:text-white dark:hover:bg-sky-800 gap-3"
+        data-accordion-target="#accordion-collapse-body-2"
         aria-expanded="false"
-        aria-controls="panelsStayOpen-collapseTwo"
+        aria-controls="accordion-collapse-body-2"
       >
-        Accordion Item #2
+        <span>Is there a Figma file available?</span>
+        <svg
+          data-accordion-icon
+          class="w-3 h-3 rotate-180 shrink-0"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 10 6"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M9 5 5 1 1 5"
+          />
+        </svg>
       </button>
     </h2>
     <div
-      id="panelsStayOpen-collapseTwo"
-      class="accordion-collapse collapse"
-      aria-labelledby="panelsStayOpen-headingTwo"
+      id="accordion-collapse-body-2"
+      class="hidden"
+      aria-labelledby="accordion-collapse-heading-2"
     >
-      <div class="accordion-body">
-        <strong>This is the second item's accordion body.</strong> It is hidden
-        by default, until the collapse plugin adds the appropriate classes that
-        we use to style each element. These classes control the overall
-        appearance, as well as the showing and hiding via CSS transitions. You
-        can modify any of this with custom CSS or overriding our default
-        variables. It's also worth noting that just about any HTML can go within
-        the <code>.accordion-body</code>, though the transition does limit
-        overflow.
+      <div class="p-5 border border-b-0 border-gray-200 dark:border-gray-700">
+        <p class="mb-2 text-gray-500 dark:text-gray-400">
+          Flowbite is first conceptualized and designed using the Figma software
+          so everything you see in the library has a design equivalent in our
+          Figma file.
+        </p>
+        <p class="text-gray-500 dark:text-gray-400">
+          Check out the
+          <a
+            href="https://flowbite.com/figma/"
+            class="text-blue-600 dark:text-blue-500 hover:underline"
+            >Figma design system</a
+          >
+          based on the utility classes from Tailwind CSS and components from
+          Flowbite.
+        </p>
       </div>
     </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+    <h2 id="accordion-collapse-heading-3">
       <button
-        class="accordion-button collapsed"
         type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#panelsStayOpen-collapseThree"
+        class="flex items-center justify-between text-[20px] w-full p-5 font-sm rtl:text-right text-sky-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-sky-200 dark:focus:ring-sky-800 dark:border-gray-700 dark:text-gray-400 hover:bg-sky-500 hover:text-white dark:hover:bg-sky-800 gap-3"
         aria-expanded="false"
-        aria-controls="panelsStayOpen-collapseThree"
+        aria-controls="accordion-collapse-body-3"
       >
-        Accordion Item #3
+        <span>What are the differences between Flowbite and Tailwind UI?</span>
+        <svg
+          data-accordion-icon
+          class="w-3 h-3 rotate-180 shrink-0"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 10 6"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M9 5 5 1 1 5"
+          />
+        </svg>
       </button>
     </h2>
     <div
-      id="panelsStayOpen-collapseThree"
-      class="accordion-collapse collapse"
-      aria-labelledby="panelsStayOpen-headingThree"
+      id="accordion-collapse-body-3"
+      class="hidden"
+      aria-labelledby="accordion-collapse-heading-3"
     >
-      <div class="accordion-body">
-        <strong>This is the third item's accordion body.</strong> It is hidden
-        by default, until the collapse plugin adds the appropriate classes that
-        we use to style each element. These classes control the overall
-        appearance, as well as the showing and hiding via CSS transitions. You
-        can modify any of this with custom CSS or overriding our default
-        variables. It's also worth noting that just about any HTML can go within
-        the <code>.accordion-body</code>, though the transition does limit
-        overflow.
+      <div class="p-5 border border-t-0 border-gray-200 dark:border-gray-700">
+        <p class="mb-2 text-gray-500 dark:text-gray-400">
+          The main difference is that the core components from Flowbite are open
+          source under the MIT license, whereas Tailwind UI is a paid product.
+          Another difference is that Flowbite relies on smaller and standalone
+          components, whereas Tailwind UI offers sections of pages.
+        </p>
+        <p class="mb-2 text-gray-500 dark:text-gray-400">
+          However, we actually recommend using both Flowbite, Flowbite Pro, and
+          even Tailwind UI as there is no technical reason stopping you from
+          using the best of two worlds.
+        </p>
+        <p class="mb-2 text-gray-500 dark:text-gray-400">
+          Learn more about these technologies:
+        </p>
+        <ul class="ps-5 text-gray-500 list-disc dark:text-gray-400">
+          <li>
+            <a
+              href="https://flowbite.com/pro/"
+              class="text-blue-600 dark:text-blue-500 hover:underline"
+              >Flowbite Pro</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://tailwindui.com/"
+              rel="nofollow"
+              class="text-blue-600 dark:text-blue-500 hover:underline"
+              >Tailwind UI</a
+            >
+          </li>
+        </ul>
       </div>
     </div>
   </div>
