--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -35,7 +35,7 @@
     alt=""
     class="absolute -z-10 w-full sm:h-full object-cover object-right md:object-center brightness-150"
   />
-  <div class="container px-4">
+  <div class="container px-4 mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
     <h4
       class="text-white border-b-4 border-solid border-sky-500 pt-4 font-serif"
     >
@@ -45,7 +45,7 @@
   <app-portafolio />
 </section>
 <section id="proyectos" class="border-t-8 w-full">
-  <div class="container px-4">
+  <div class="container px-4 mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
     <h4 class="border-b-4 border-solid border-sky-500 pt-4 font-serif">
       Titulo
     </h4>
