--- a/src/app/portafolio/portafolio.component.html
+++ b/src/app/portafolio/portafolio.component.html
@@ -1,9 +1,5 @@
 <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-  <div class="container mx-auto p-8 flex flex-wrap">
-    <div
-      class=""
-      style="background-image:url(https://s1.wp.com/wp-content/themes/h4/assets/hosting/globe.svg);"
-    ></div>
+  <div class="md:container mx-auto p-8 flex flex-wrap" style="">
     <div
       class="rounded-md border hover:shadow-xl p-4 m-1 grid justify-items-center"
       style="width: 18rem;"
@@ -13,18 +9,18 @@
         [icon]="item.img"
         style="font-size:3rem;color:#51bde8;border-radius:50%"
       ></fa-icon>
-      <div class="text-center pt-6">
+      <div class="text-center">
         <h5
           class="text-lg md:text-lg font-serif font-bold tracking-tight text-sky-400/100 hover:text-sky-400/100 sm:text-lg"
         >
           {{ item.title }}
         </h5>
-        <p class="font-serif mb-4 text-white font-serif">
+        <p class="font-serif mb-4 text-white">
           {{ item.description }}
         </p>
         <a
           href="#"
-          class="rounded-md bg-gray-800 p-1 mb-0 text-gray-400 hover:text-white px-3.5 py-2.5 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+          class="rounded-md bg-gray-800 p-1 mb-0 text-gray-400 hover:text-white px-3.5 py-2.5 z-50 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
           >Go somewhere</a
         >
       </div>
