--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,20 +6,16 @@
       href="https://flowbite.com/"
       class="flex items-center space-x-3 rtl:space-x-reverse"
     >
-      <img
-        src="https://flowbite.com/docs/images/logo.svg"
-        class="h-8"
-        alt="Flowbite Logo"
-      />
+      <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="" />
       <span
-        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+        class="self-center text-white text-2xl font-semibold whitespace-nowrap dark:text-white"
         >Flowbite</span
       >
     </a>
     <button
       data-collapse-toggle="navbar-default"
       type="button"
-      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-white rounded-lg md:hidden hover:bg-gray-900 focus:outline-none focus:ring-1 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
       aria-controls="navbar-default"
       aria-expanded="false"
     >
@@ -81,48 +77,6 @@
           >
         </li>
       </ul>
-    </div>
-    <div
-      class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
-    >
-      <button
-        type="button"
-        class="relative rounded-full mt-8 ml-4.5 bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-      >
-        <span class="absolute -inset-1.5"></span>
-        <span class="sr-only">View notifications</span>
-        <fa-icon
-          [icon]="faCoffee"
-          style="font-size: 18px;display: block;width: 23px;heigth: 45px;height: 23px;padding: -5px;"
-        ></fa-icon>
-        <span class="sr-only">Notifications</span>
-        <div
-          class="absolute inline-flex items-center justify-center w-6 h-6 text-[10px] font-bold text-white bg-red-500 border-1 hover:border-2 border-white rounded-full -top-2 -end-2 dark:border-gray-900 z-40"
-        >
-          20
-        </div>
-      </button>
-
-      <!-- Profile dropdown -->
-      <div class="relative ml-1">
-        <div>
-          <button
-            type="button"
-            class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-            id="user-menu-button"
-            aria-expanded="false"
-            aria-haspopup="true"
-          >
-            <span class="absolute -inset-1.5"></span>
-            <span class="sr-only">Open user menu</span>
-            <img
-              class="h-12 w-12 rounded-full"
-              src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-              alt=""
-            />
-          </button>
-        </div>
-      </div>
     </div>
   </div>
 </nav>
