--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,4 +1,42 @@
 <div class="relative isolate px-6 pt-14 lg:px-8">
+  <div class="fixed inset-auto right-2 z-50 flex pr-2 sm:fixed sm:pr-0">
+    <button
+      type="button"
+      class="relative rounded-full mt-8 ml-4.5 bg-gray-800 p-1 text-gray-400 h-max hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+    >
+      <fa-icon
+        [icon]="faBell"
+        style="font-size: 18px;display: block;width: 23px;heigth: 45px;height: 23px;padding: -5px;"
+      ></fa-icon>
+      <span class="sr-only">Notifications</span>
+      <div
+        class="absolute inline-flex items-center justify-center w-6 h-6 text-[10px] font-bold text-white bg-red-500 border-1 hover:border-2 border-white rounded-full -top-2 -end-2 dark:border-gray-900"
+      >
+        20
+      </div>
+    </button>
+
+    <!-- Profile dropdown -->
+    <div class="relative ml-1">
+      <div>
+        <button
+          type="button"
+          class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+          id="user-menu-button"
+          aria-expanded="false"
+          aria-haspopup="true"
+        >
+          <span class="absolute -inset-1.5"></span>
+          <span class="sr-only">Open user menu</span>
+          <img
+            class="h-12 w-12 rounded-full"
+            src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+            alt=""
+          />
+        </button>
+      </div>
+    </div>
+  </div>
   <div
     class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
     aria-hidden="true"
@@ -22,18 +60,20 @@
     </div>
   </div>
 </div>
+
 <section
   id="portafolio"
   class="border-t-8 w-full relative"
-  style="    background-image: url(https://s1.wp.com/wp-content/themes/h4/assets/hosting/globe.svg);
+  style="background-image: url(https://s1.wp.com/wp-content/themes/h4/assets/hosting/globe.svg);
   background-position: top;
-  background-repeat: space;
+  background-repeat: no-repeat;
+    background-size: 40rem;
 "
 >
   <img
     src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;crop=focalpoint&amp;fp-y=.8&amp;w=2830&amp;h=1500&amp;q=80&amp;blend=111827&amp;sat=-100&amp;exp=15&amp;blend-mode=multiply"
     alt=""
-    class="absolute -z-10 w-full sm:h-full object-cover object-right md:object-center brightness-150"
+    class="absolute -z-40 w-full h-full object-cover object-right md:object-center brightness-150"
   />
   <div class="container px-4 mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
     <h4
@@ -51,4 +91,5 @@
     </h4>
   </div>
   <app-proyectos />
+  <img src="../assets/primera.jpg" />
 </section>
