--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -1,11 +1,16 @@
 <div
   class="w-full justify-center flex mx-auto max-w-screen-xl p-4 py-6 lg:py-8"
 >
-  <div id="accordion-collapse" class="w-full" data-accordion="collapse">
+  <div
+    id="accordion-collapse"
+    class="w-full"
+    data-accordion="collapse"
+    data-active-classes="text-white bg-sky-500"
+  >
     <h2 id="accordion-collapse-heading-1" class="">
       <button
         type="button"
-        class="flex items-center rounded-t-lg justify-between text-[20px] w-full p-5 font-sm rtl:text-right text-sky-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-sky-200 dark:focus:ring-sky-800 dark:border-gray-700 dark:text-gray-400 hover:bg-sky-500 hover:text-white dark:hover:bg-sky-800 gap-3"
+        class="flex items-center -z-40 rounded-t-lg justify-between text-[20px] w-full p-5 font-sm rtl:text-right text-sky-500 border border-b-0 border-gray-200 focus:ring-4 click:bg-sky focus:ring-sky-200 dark:focus:ring-sky-800 dark:border-gray-700 dark:text-gray-400 hover:bg-sky-500 hover:text-white dark:hover:bg-sky-800 gap-3"
         data-accordion-target="#accordion-collapse-body-1"
         aria-expanded="true"
         aria-controls="accordion-collapse-body-1"
