--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -48,7 +48,7 @@
           class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white"
           aria-current="page">{{item.titulo}}
           </a>
-          <ul class="py-2 hidden absolute z-40" >
+          <ul class="py-2 hidden relative md:absolute z-40" >
           <li *ngFor="let child of item.children" >
             <a href="" *ngIf="child.childtitle!=''" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
               {{
