--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,18 +39,18 @@
     </button>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul
-        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        class="font-medium flex flex-col p-4 md:p-0 mt-4  border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
       >
       
-      <li *ngFor="let item of navegation">
+      <li *ngFor="let item of navegation" class="mb-4 ">
           <a
           href="{{item.url}}"
-          class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white"
+          class="rounded-md bg-gray-900 px-3 py-2 text-sm  text-white"
           aria-current="page">{{item.titulo}}
           </a>
-          <ul class="py-2 hidden relative md:absolute z-40" >
-          <li *ngFor="let child of item.children" >
-            <a href="" *ngIf="child.childtitle!=''" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
+          <ul class="py-1 hidden relative md:absolute z-40 " >
+          <li *ngFor="let child of item.children" class="w-24" >
+            <a href="" *ngIf="child.childtitle!=''" class="block text-sm text-left px-3 py-2 text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
               {{
                 child.childtitle
               }}
