--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -62,7 +62,7 @@
 
 <section
   id="portafolio"
-  class="border-t-8 w-full relative"
+  class=" w-full relative "
   style="background-image:url(https://s1.wp.com/wp-content/themes/h4/assets/hosting/globe.svg);background-position: top;background-repeat: no-repeat;background-size: 40rem;"
 >
   <img
@@ -72,7 +72,7 @@
   />
   <div class="container px-4 mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
     <h4
-      class="text-white border-b-4 border-solid border-sky-500 pt-4 font-serif"
+      class="text-white border-b-2 border-solid border-[#23324c8f] w-3/4 pt-4 font-serif"
     >
       Titulo
     </h4>
