--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -81,7 +81,7 @@
 </section>
 <section id="proyectos" class="border-t-8 w-full">
   <div class="container px-4 mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-    <h4 class="border-b-4 border-solid border-sky-500 pt-4 font-serif">
+    <h4 class="border-b-2 border-solid border-[#23324c8f] w-3/4 pt-4 font-serif">
       Titulo
     </h4>
   </div>
