cambios en el header

--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -6,7 +6,7 @@
     >
       <fa-icon
         [icon]="faBell"
-        style="font-size: 18px;display: block;width: 23px;heigth: 45px;height: 23px;padding: -5px;"
+        style="font-size: 18px;display: block;width: 23px;height: 23px;padding: -5px;"
       ></fa-icon>
       <span class="sr-only">Notifications</span>
       <div
