--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,3 +1,4 @@
+<app-form-log></app-form-log>
 <div class="relative isolate px-6 pt-14 lg:px-8">
   <div class="fixed inset-auto right-2 z-50 flex pr-2 sm:fixed sm:pr-0">
     <button
@@ -20,24 +21,6 @@
     <div class="relative ml-1">
       <div>
 
-
-<form class="max-w-sm mx-auto z-50 bg-[#19243ccc] rounded-md p-4"  (ngSubmit)=”onSubmit()” #miForm=”ngForm”>
-  <div class="mb-5">
-    <label for="email" class="block mb-2 text-sm font-medium text-white">Your email</label>
-    <input type="email" id="email" #email ngModel class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com" required />
-  </div>
-  <div class="mb-5">
-    <label for="password" class="block mb-2 text-sm font-medium text-white">Your password</label>
-    <input type="password" id="password" #password  ngModel  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
-  </div>
-  <div class="flex items-start mb-5">
-    <div class="flex items-center h-5">
-      <input id="remember" type="checkbox" value="" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800" required />
-    </div>
-    <label for="remember" class="ms-2 text-sm font-medium text-gray-300">Remember me</label>
-  </div>
-  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
-</form>
 
         <button
           type="button"
@@ -72,9 +55,11 @@
       <div class="mt-10 flex items-center justify-center gap-x-6">
         <a
           href="{{ item.url }}"
-          class="rounded-md bg-gray-800 p-1 text-gray-400 hover:text-white px-3.5 py-2.5 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-          >Leer más <fa-icon [icon]="faArrowRight"> </fa-icon
-        ></a>
+          class="rounded-md bg-gray-800  flex content-center p-1 text-gray-400 hover:text-white px-3.5 py-2.5 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+          >Leer más <fa-icon
+          [icon]="faArrowRight"
+          style="font-size: 12px;display: block;width: 23px;height: 23px;padding: -5px;"
+        ></fa-icon></a>
       </div>
     </div>
   </div>
