--- a/src/app/form-log/form-log.component.html
+++ b/src/app/form-log/form-log.component.html
@@ -2,11 +2,11 @@
 <div class="fixed inset-auto right-2 z-50 flex pr-2 mt-2 sm:fixed sm:pr-0">
 <form class="max-w-sm mx-auto z-50 bg-[#19243ccc] rounded-md p-4"  (ngSubmit)="onSubmit(miForm)" #miForm="ngForm">
     <div class="mb-5">
-      <label for="email" class="block mb-2 text-sm font-medium text-white">Your email</label>
+      <label for="email" class="block mb-2 text-sm font-medium text-white">Email</label>
       <input type="email" name="email" #email ngModel class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com" required />
     </div>
     <div class="mb-5">
-      <label for="password" class="block mb-2 text-sm font-medium text-white">Your password</label>
+      <label for="password" class="block mb-2 text-sm font-medium text-white">Password</label>
       <input type="password" name="password" #password  ngModel  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required />
     </div>
     <div class="flex items-start mb-5">
