--- a/src/app/form-log/form-log.component.html
+++ b/src/app/form-log/form-log.component.html
@@ -1,6 +1,6 @@
 
 <div class="fixed inset-auto right-2 z-50 flex pr-2 mt-2 sm:fixed sm:pr-0">
-<form class="max-w-sm mx-auto z-50 bg-[#19243ccc] rounded-md p-4"  (ngSubmit)="onSubmit(miForm)" #miForm="ngForm">
+<form [ngClass]="asignaClases()"  (ngSubmit)="onSubmit(miForm)" #miForm="ngForm">
     <div class="mb-5">
       <label for="email" class="block mb-2 text-sm font-medium text-white">Email</label>
       <input type="email" name="email" #email ngModel class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com" required />
@@ -19,3 +19,4 @@
   </form>
 
 </div>
+{{name}}
