--- a/src/app/form-log/form-log.component.html
+++ b/src/app/form-log/form-log.component.html
@@ -1,5 +1,5 @@
 
-<div class="fixed inset-auto right-2 z-50 flex pr-2 mt-2 sm:fixed sm:pr-0">
+<div [ngClass]="name ? hidden : classUserRegistrado">
 <form [ngClass]="asignaClases()"  (ngSubmit)="onSubmit(miForm)" #miForm="ngForm">
     <div class="mb-5">
       <label for="email" class="block mb-2 text-sm font-medium text-white">Email</label>
@@ -18,4 +18,20 @@
     <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
   </form>
 
+</div>
+<div id="alert-border-2" [ngClass]="name ? classValid : classError  " role="alert">
+  
+  <fa-icon
+  [icon]="faExclamationCircle" 
+  style="font-size: 16px;display: block;"
+></fa-icon>
+  <div class="ms-3 text-sm font-medium">
+    A simple danger alert with an <a href="#" class="font-semibold underline hover:no-underline">example link</a>. Give it a click if you like.
+  </div>
+  <button type="button" [ngClass]="name ? classBtncerrarValid :classBtncerrarError"  data-dismiss-target="#alert-border-2" aria-label="Close">
+    <span class="sr-only">Dismiss</span>
+    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+    </svg>
+  </button>
 </div>
