--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,7 +1,7 @@
 <app-form-log 
  (envRes)="captaResultado($event)"></app-form-log>
 <div class="relative isolate px-6 pt-14 lg:px-8">
-  <div class="fixed inset-auto right-2 z-50 flex pr-2 sm:fixed sm:pr-0">
+  <div class="fixed inset-auto right-2 z-50 flex pr-2 sm:fixed sm:pr-0" *ngIf="resultadoP">
     <button
       type="button"
       class="relative rounded-full mt-8 ml-4.5 bg-gray-800 p-1 text-gray-400 h-max hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
@@ -21,24 +21,41 @@
     <!-- Profile dropdown -->
     <div class="relative ml-1">
       <div>
-
-
         <button
-          type="button"
-          class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-          id="user-menu-button"
-          aria-expanded="false"
-          aria-haspopup="true"
-        >
-          <span class="absolute -inset-1.5"></span>
-          <span class="sr-only">Open user menu</span>
-          <img
-            class="h-12 w-12 rounded-full"
-            src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-            alt=""
-          />
-        </button>
-        {{resultadoP}}
+        type="button"
+        class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
+        id="user-menu-button"
+        aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
+        <span class="absolute -inset-1.5"></span>
+        <span class="sr-only">Open user menu</span>
+        <img
+          class="h-12 w-12 rounded-full"
+          src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+          alt=""
+        />
+      </button>
+       <!-- Dropdown menu -->
+    <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
+      <div class="px-4 py-3">
+        <span class="block text-sm text-gray-900 dark:text-white">    {{resultadoP}}</span>
+        <span class="block text-sm  text-gray-500 truncate dark:text-gray-400"></span>
+      </div>
+      <ul class="py-2" aria-labelledby="user-menu-button">
+        <li>
+          <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
+        </li>
+        <li>
+          <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Settings</a>
+        </li>
+        <li>
+          <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Earnings</a>
+        </li>
+        <li>
+          <a (click)="SignOut()" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
+        </li>
+      </ul>
+      </div>
+    
       </div>
     </div>
   </div>
