--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -63,9 +63,10 @@
     class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
     aria-hidden="true"
   ></div>
+  
   <div class="container mx-auto p-2 sm:py-48 lg:py-48">
     <div class="text-center" *ngFor="let item of datas" >
-      {{role}}
+      
       <div *ngIf="item.role==role">
         <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">
           {{ item.name }} 
@@ -114,3 +115,10 @@
   </div>
   <app-proyectos />
 </section>
+<style>
+  [data-popper-arrow]:after {
+
+    border-top: 2px solid #e5e7eb;
+    border-left: 2px solid #e5e7eb;
+  }
+</style>
