--- a/src/app/form-log/form-log.component.html
+++ b/src/app/form-log/form-log.component.html
@@ -33,7 +33,7 @@
     <div class="flex items-start mb-5">
       
       <label for="remember" class="ms-2 text-sm font-medium text-gray-300">
-        <a  href="['/user/bob']"> Crear cuenta</a>
+        <a  href="/registrar"> Crear cuenta</a>
       </label>
     </div>
     <button type="submit" class="rounded-md bg-gray-800  flex content-center p-1 text-white hover:text-white px-3.5 py-2.5 text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Submit</button>
@@ -52,7 +52,7 @@
   </div>
 
 </div>
-<router-outlet></router-outlet>
+
 <style>
   [data-popper-arrow]:after {
   
