--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -115,6 +115,18 @@
   </div>
   <app-proyectos />
 </section>
+<section class="w-full relative bg-gray-600 p-6 flex">
+  <div class="container px-4 w-1/2 p-4 py-6 lg:py-8">
+    <h4
+      class="text-white text-center pt-4 font-serif"
+    >
+      Registrar usuario
+    </h4>
+  </div>
+  <div class="w-1/2">
+    <app-registrar></app-registrar>
+  </div>
+</section>
 <style>
   [data-popper-arrow]:after {
 
