--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,24 +1,25 @@
-<footer class="bg-gray-800 border-gray-200 dark:bg-gray-900 text-white">
+<footer class="bg-gray-800 {{  location=='/' ? 'relative' : 'absolute'}} w-full bottom-0  dark:bg-gray-900 text-white">
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
     <div class="md:flex md:justify-between">
       <div class="mb-6 md:mb-0">
-        <a href="https://flowbite.com/" class="flex items-center">
+        <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
           <img
-            src="https://flowbite.com/docs/images/logo.svg"
-            class="h-8 me-3"
-            alt="FlowBite Logo"
+            src="https://stackblitz.com/storage/blobs/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBNWt4RGc9PSIsImV4cCI6bnVsbCwicHVyIjoiYmxvYl9pZCJ9fQ==--f62b5950707c670df0d7263d2b23e244642095d3/logo.png"
+            class="w-20"
+            alt=""
           />
           <span
-            class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-            >Flowbite</span
+            class="self-center text-white text-2xl font-semibold whitespace-nowrap dark:text-white"
+            >SOLUTION SUPPORTS</span
           >
+          {{ location=='/' ? false : true}}
         </a>
       </div>
     </div>
     <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
     <div class="sm:flex sm:items-center sm:justify-between">
       <span class="text-sm text-white sm:text-center dark:text-gray-400"
-        >©{{ today | date : 'YYYY' }}<a href="/" class="hover:underline"></a>.
+        >©{{ today | date : 'YYYY' }}.
         All Rights Reserved.
       </span>
       <div class="flex mt-4 sm:justify-center sm:mt-0">
