--- a/src/app/portafolio/portafolio.component.html
+++ b/src/app/portafolio/portafolio.component.html
@@ -1,10 +1,10 @@
 <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-  <div class="md:container mx-auto p-8 flex flex-wrap" style="">
+  <div class="md:container mx-auto p-8 flex flex-wrap" >
+ 
     <div
       class="rounded-md border hover:shadow-xl p-4 m-1 grid justify-items-center"
       style="width: 18rem;"
-      *ngFor="let item of portafolio"
-    >
+      *ngFor="let item of lenguajes">
       <fa-icon
         [icon]="item.img"
         style="font-size:3rem;color:#51bde8;border-radius:50%"
@@ -25,5 +25,6 @@
         >
       </div>
     </div>
+   
   </div>
 </div>
